--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
       crossorigin="anonymous"
     />
-<!---HELLO PARKER, ITS ME, YOUR LOVER-->
+    <!---HELLO PARKER, ITS ME, YOUR LOVER-->
+    <!---JOE MAMA-->
     <link rel="stylesheet" href="../styles.css" />
 
     <title>Celestials</title>
