--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!---HELLO PARKER, ITS ME, YOUR LOVER-->
     <!---JOE MAMA-->
     <!---JOE MAMAASDFASDF-->
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Celestials</title>
   </head>
@@ -29,10 +29,10 @@
           <a class="navbar-brand font-weight-bold" href="index.html">
             <div class="row">
               <div class="col d-flex justify-content-center">
-                <img src="/svgs/White_C_Logo (1).svg" alt="" />
+                <img src="svgs/White_C_Logo (1).svg" alt="" />
               </div>
               <div class="col p-0 align-middle">
-                <img src="/svgs/FINALWHITETEXT.svg" alt="" />
+                <img src="svgs/FINALWHITETEXT.svg" alt="" />
               </div>
             </div>
           </a>
@@ -937,13 +937,13 @@
             <div class="col">
               <div class="row">
                 <div class="col p-0">
-                  <img src="/svgs/bigwhiteclogo.svg" alt="" />
+                  <img src="svgs/bigwhiteclogo.svg" alt="" />
                 </div>
               </div>
 
               <div class="row">
                 <div class="col p-0">
-                  <img src="/svgs/FINALWHITETEXTBIG.svg" alt="" />
+                  <img src="svgs/FINALWHITETEXTBIG.svg" alt="" />
                 </div>
               </div>
               <div class="row">
@@ -1015,7 +1015,7 @@
           >
             <div class="col-3 d-none d-md-block">
               <img
-                src="/images/Screenshot 2022-10-17 at 12.37.09 PM.png"
+                src="images/Screenshot 2022-10-17 at 12.37.09 PM.png"
                 class="img-thumbnail"
                 alt=""
               />
@@ -1043,7 +1043,7 @@
             <div class="row">
               <div class="col-3 d-none d-md-block">
                 <img
-                  src="/images/Screenshot 2022-10-17 at 12.37.09 PM.png"
+                  src="images/Screenshot 2022-10-17 at 12.37.09 PM.png"
                   class="img-thumbnail"
                   alt=""
                 />
@@ -1071,7 +1071,7 @@
             <div class="row">
               <div class="col-3 d-none d-md-block">
                 <img
-                  src="/images/Screenshot 2022-10-17 at 12.37.09 PM.png"
+                  src="images/Screenshot 2022-10-17 at 12.37.09 PM.png"
                   class="img-thumbnail"
                   alt=""
                 />
