--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
       integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
       crossorigin="anonymous"
     />
-    <!---HELLO PARKER, ITS ME, YOUR LOVER-->
-    <!---JOE MAMA-->
-    <!---JOE MAMAASDFASDF-->
     <link rel="stylesheet" href="../styles.css" />
-
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>Celestials</title>
+    <!--FAVICON ICON-->
+    <link rel="icon" type="image/x -icon" href="/images/favicon.png">
   </head>
   <body>
     <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
@@ -55,7 +54,7 @@
               <li class="nav-item dropdown">
                 <a
                   style="font-family: Franklin Gothic Demi Cond"
-                  class="fw-bold fs-3 text-light nav-link active dropdown-toggle"
+                  class="fw-bold fs-5 text-light nav-link active dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -1043,7 +1042,7 @@
             <div class="row">
               <div class="col-3 d-none d-md-block">
                 <img
-                  src="/images/Screenshot 2022-10-17 at 12.37.09 PM.png"
+                  src="images/Screenshot 2022-10-17 at 12.37.09 PM.png"
                   class="img-thumbnail"
                   alt=""
                 />
