--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Celestials</title>
     <!--FAVICON ICON-->
-    <link rel="icon" type="image/x -icon" href="images/favicon.png" />
+    <link rel="icon" type="image/x -icon" href="images/favicon.png">
   </head>
   <body>
     <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
