--- a/index.html
+++ b/index.html
@@ -147,71 +147,68 @@
       >
         <div class="row">
           <div class="col-1"></div>
-          <div class="col-auto">
-            <div class="col">
-              <div class="row">
-                <div class="col p-0">
-                  <img src="svgs/bigwhiteclogo.svg" alt="" />
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col p-0">
-                  <img src="svgs/FINALWHITETEXTBIG.svg" alt="" />
-                </div>
-              </div>
-              <div class="row">
-                <div class="col justify-content-end p-0">
-                  <h1
-                    style="font-size: 100px; text-shadow: 3px 3px 4px #000000"
-                    class="text-center text-light"
-                  >
-                    NOW RECRUITING FOR:
-                  </h1>
-                </div>
-              </div>
-              <div class="row">
-                <h2
-                  class="p-0 text-light"
-                  style="font-size: 50px; text-shadow: 3px 3px 4px #000000"
-                >
-                  WoW: DRAGONFLIGHT
-                </h2>
-              </div>
-            </div>
+          <div class="col">
             <div class="row">
-              <div class="col-auto p-0">
-                <h2
-                  class="p-0 text-light text"
-                  style="font-size: 50px; text-shadow: 3px 3px 4px #000000"
-                >
-                  VALORANT
-                </h2>
+              <div class="col">
+                <img class="img-fluid" src="svgs/bigwhiteclogo.svg" alt="" />
               </div>
             </div>
             <div class="row">
               <div class="col p-0">
-                <h2
-                  class="text-light"
-                  style="font-size: 50px; text-shadow: 3px 3px 4px #000000"
-                >
-                  LEAGUE OF LEGENDS
-                </h2>
+                <img
+                  class="img-fluid"
+                  src="svgs/FINALWHITETEXTBIG.svg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
         </div>
+
         <div class="row">
-          <div class="col-8"></div>
-          <div class="col-auto">
-            <button
-              style="filter: drop-shadow(10px 10px 3px rgb(153, 100, 120))"
-              class="btn-lg btn btn-dark rounded-xl mb-5"
-            >
-              <h1 class="" style="font-family: Franklin Gothic Demi Cond">
-                Apply Now
-              </h1>
-            </button>
+          <div class="col-md-1 col-sm-0 pl-0 lr-0"></div>
+          <div class="col">
+            <div class="row">
+              <div class="col p-0">
+                <strong class="text-responsivebig text-light text-shadow"
+                  >NOW RECRUITING FOR:</strong
+                >
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p
+                  style="font-weight: black"
+                  class="text-responsive text-light text-shadow"
+                >
+                  VALORANT
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p class="text-responsive text-light text-shadow">LEAGUE</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-7">
+                <p class="text-responsive text-light text-shadow">WoW</p>
+              </div>
+              <div class="col-md-3 col-sm-auto">
+                <button
+                  style="height: 100%; width: 100%"
+                  class="btn btn-dark p-0"
+                  type="button"
+                >
+                  <p
+                    style="font-weight: black"
+                    class="text-responsive text-light text-shadow p-0"
+                  >
+                    Apply Now
+                  </p>
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
