--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
       <nav
         id="navtest"
-        class="navbar navbar-expand-md navbar-light sticky-top p-0"
+        class="navbar navbar-expand-md navbar-light sticky-top mr-0"
       >
         <div class="container-lg">
           <a class="navbar-brand font-weight-bold" href="index.html">
             <div class="row">
-              <div class="col d-flex justify-content-center">
+              <div class="col d-flex justify-content-center p-0">
                 <img
                   src="/Celestials_Website/svgs/White_C_Logo (1).svg"
                   alt=""
@@ -55,8 +55,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a
-                  style="font-family: Franklin Gothic Demi Cond"
-                  class="fw-bold fs-5 text-light nav-link active dropdown-toggle"
+                  class="fw-bold fs-4 text-light nav-link active dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -67,15 +66,15 @@
                   TEAMS
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="valpage.html"
+                  <a class="dropdown-item" href="pages/valpage.html"
                     >Valorant
                     <img src="/Celestials_Website/svgs/valorant.svg" alt="" />
                   </a>
-                  <a class="dropdown-item" href="leaguepage.html"
+                  <a class="dropdown-item" href="pages/leaguepage.html"
                     >League
                     <img src="/Celestials_Website/svgs/league.svg" alt="" />
                   </a>
-                  <a class="dropdown-item" href="wowpage.html"
+                  <a class="dropdown-item" href="pages/wowpage.html"
                     >WoW
                     <img src="/Celestials_Website/svgs/WoW.svg" alt="" />
                   </a>
@@ -83,8 +82,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  style="font-family: Franklin Gothic Demi Cond"
-                  class="nav-link active text-light dropdown-toggle fw-bold fs-3"
+                  class="nav-link active text-light dropdown-toggle fw-bold fs-4"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -111,8 +109,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  style="font-family: Franklin Gothic Demi Cond"
-                  class="fw-bold fs-3 text-light nav-link active"
+                  class="fw-bold fs-4 text-light nav-link active"
                   href=""
                   id="navbarDropdown"
                   role="button"
@@ -124,8 +121,7 @@
               </li>
               <li class="nav-item active">
                 <a
-                  style="font-family: Franklin Gothic Demi Cond"
-                  class="fw-bold fs-3 text-light nav-link active"
+                  class="fw-bold fs-4 text-light nav-link active"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -146,7 +142,7 @@
         id="mainpagebackground"
       >
         <div class="row">
-          <div class="col-1"></div>
+          <div class="col-sm-0 col-md-1"></div>
           <div class="col">
             <div class="row">
               <div class="col">
@@ -212,97 +208,21 @@
           </div>
         </div>
       </div>
-
       <div class="container-fluid mt-5">
-        <div class="container-lg">
-          <div class="row justify-content-center border-bottom border-light">
-            <div class="col-auto">
-              <h2 class="text-center text-light">News and Events</h2>
-            </div>
-          </div>
-          <div
-            style="background-color: rgb(221, 133, 86)"
-            class="row mb-4 mt-4 pt-2 pb-2 rounded"
-          >
-            <div class="col-3 d-none d-md-block">
-              <img
-                src="images/Screenshot 2022-10-17 at 12.37.09 PM.png"
-                class="img-thumbnail"
-                alt=""
-              />
-            </div>
-            <div class="col-sm-auto col-md-9">
-              <div class="row">
-                <div class="col">
-                  <h4>News Title</h4>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  News info - Lorem ipsum dolor sit amet, consectetur
-                  adipisicing elit. Natus optio delectus ullam aliquam minus
-                  unde hic, rem perferendis velit possimus dolores pariatur
-                  vitae quidem? Distinctio dolor animi impedit itaque assumenda.
-                </div>
-              </div>
-            </div>
-          </div>
-          <div
-            style="background-color: rgb(221, 133, 86)"
-            class="row mb-4 mt-4 pt-2 pb-2 rounded"
-          >
-            <div class="row">
-              <div class="col-3 d-none d-md-block">
-                <img
-                  src="images/Screenshot 2022-10-17 at 12.37.09 PM.png"
-                  class="img-thumbnail"
-                  alt=""
-                />
-              </div>
-              <div class="col-sm-auto col-md-9">
-                <div class="row">
-                  <div class="col"><h4>News Title</h4></div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    News info - Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Natus optio delectus ullam aliquam minus
-                    unde hic, rem perferendis velit possimus dolores pariatur
-                    vitae quidem? Distinctio dolor animi impedit itaque
-                    assumenda.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div
-            style="background-color: rgb(221, 133, 86)"
-            class="row mb-4 mt-4 pt-2 pb-2 rounded"
-          >
-            <div class="row">
-              <div class="col-3 d-none d-md-block">
-                <img
-                  src="images/Screenshot 2022-10-17 at 12.37.09 PM.png"
-                  class="img-thumbnail"
-                  alt=""
-                />
-              </div>
-              <div class="col-sm-auto col-md-9">
-                <div class="row">
-                  <div class="col"><h4>News Title</h4></div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    News info - Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Natus optio delectus ullam aliquam minus
-                    unde hic, rem perferendis velit possimus dolores pariatur
-                    vitae quidem? Distinctio dolor animi impedit itaque
-                    assumenda.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="container">
+          <iframe
+            class="responsive-iframe su-youtube"
+            modestbranding="1"
+            controls="1"
+            autoplay="1"
+            src="https://www.youtube.com/embed/RpkvWf3OICE?controls=0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+            rel="0"
+            loop="1"
+          ></iframe>
         </div>
       </div>
     </div>
