--- a/pages/valpage.html
+++ b/pages/valpage.html
@@ -21,12 +21,12 @@
     <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
       <nav
         id="navtest"
-        class="navbar navbar-expand-md navbar-light sticky-top p-0"
+        class="navbar navbar-expand-md navbar-light sticky-top mr-0"
       >
         <div class="container-lg">
-          <a class="navbar-brand font-weight-bold" href="index.html">
+          <a class="navbar-brand font-weight-bold" href="../index.html">
             <div class="row">
-              <div class="col d-flex justify-content-center">
+              <div class="col d-flex justify-content-center p-0">
                 <img
                   src="/Celestials_Website/svgs/White_C_Logo (1).svg"
                   alt=""
@@ -55,8 +55,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a
-                  style="font-family: Franklin Gothic Demi Cond"
-                  class="fw-bold fs-5 text-light nav-link active dropdown-toggle"
+                  class="fw-bold fs-4 text-light nav-link active dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -83,8 +82,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  style="font-family: Franklin Gothic Demi Cond"
-                  class="nav-link active text-light dropdown-toggle fw-bold fs-3"
+                  class="nav-link active text-light dropdown-toggle fw-bold fs-4"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -111,8 +109,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  style="font-family: Franklin Gothic Demi Cond"
-                  class="fw-bold fs-3 text-light nav-link active"
+                  class="fw-bold fs-4 text-light nav-link active"
                   href=""
                   id="navbarDropdown"
                   role="button"
@@ -124,8 +121,7 @@
               </li>
               <li class="nav-item active">
                 <a
-                  style="font-family: Franklin Gothic Demi Cond"
-                  class="fw-bold fs-3 text-light nav-link active"
+                  class="fw-bold fs-4 text-light nav-link active"
                   href="#"
                   id="navbarDropdown"
                   role="button"
