--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
           <a class="navbar-brand font-weight-bold" href="index.html">
             <div class="row">
               <div class="col d-flex justify-content-center p-0">
-                <img
-                  src="/Celestials_Website/svgs/White_C_Logo (1).svg"
-                  alt=""
-                />
+                <img src="svgs/White_C_Logo (1).svg" alt="" />
               </div>
               <div class="col p-0 align-middle">
-                <img src="/Celestials_Website/svgs/FINALWHITETEXT.svg" alt="" />
+                <img src="svgs/FINALWHITETEXT.svg" alt="" />
               </div>
             </div>
           </a>
@@ -55,7 +52,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a
-                  class="fw-bold fs-4 text-light nav-link active dropdown-toggle"
+                  class="fw-bold fs-5 text-light nav-link active dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -82,7 +79,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link active text-light dropdown-toggle fw-bold fs-4"
+                  class="nav-link active text-light dropdown-toggle fw-bold fs-5"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -109,7 +106,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="fw-bold fs-4 text-light nav-link active"
+                  class="fw-bold fs-5 text-light nav-link active"
                   href=""
                   id="navbarDropdown"
                   role="button"
@@ -121,7 +118,7 @@
               </li>
               <li class="nav-item active">
                 <a
-                  class="fw-bold fs-4 text-light nav-link active"
+                  class="fw-bold fs-5 text-light nav-link active"
                   href="#"
                   id="navbarDropdown"
                   role="button"
