--- a/pages/s.html
+++ b/pages/s.html
@@ -27,13 +27,10 @@
           <a class="navbar-brand font-weight-bold" href="../index.html">
             <div class="row">
               <div class="col d-flex justify-content-center p-0">
-                <img
-                  src="/Celestials_Website/svgs/White_C_Logo (1).svg"
-                  alt=""
-                />
+                <img src="../svgs/White_C_Logo (1).svg" alt="" />
               </div>
               <div class="col p-0 align-middle">
-                <img src="/Celestials_Website/svgs/FINALWHITETEXT.svg" alt="" />
+                <img src="../svgs/FINALWHITETEXT.svg" alt="" />
               </div>
             </div>
           </a>
@@ -68,15 +65,15 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="valpage.html"
                     >Valorant
-                    <img src="/Celestials_Website/svgs/valorant.svg" alt="" />
+                    <img src="../svgs/valorant.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="leaguepage.html"
                     >League
-                    <img src="/Celestials_Website/svgs/league.svg" alt="" />
+                    <img src="../svgs/league.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="wowpage.html"
                     >WoW
-                    <img src="/Celestials_Website/svgs/WoW.svg" alt="" />
+                    <img src="../svgs/WoW.svg" alt="" />
                   </a>
                 </div>
               </li>
@@ -95,15 +92,15 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#"
                     >Twitter
-                    <img src="/Celestials_Website/svgs/twitter.svg" alt="" />
+                    <img src="../svgs/twitter.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="#"
                     >Tiktok
-                    <img src="/Celestials_Website/svgs/tiktok.svg" alt="" />
+                    <img src="../svgs/tiktok.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="/s.html"
                     >Twitch
-                    <img src="/Celestials_Website/svgs/twitch.svg" alt="" />
+                    <img src="../svgs/twitch.svg" alt="" />
                   </a>
                 </div>
               </li>
