slight image hrefs, playercards done

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="pages/valpage.html"
                     >Valorant
-                    <img src="/Celestials_Website/svgs/valorant.svg" alt="" />
+                    <img src="svgs/valorant.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="pages/leaguepage.html"
                     >League
-                    <img src="/Celestials_Website/svgs/league.svg" alt="" />
+                    <img src="svgs/league.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="pages/wowpage.html"
                     >WoW
-                    <img src="/Celestials_Website/svgs/WoW.svg" alt="" />
+                    <img src="svgs/WoW.svg" alt="" />
                   </a>
                 </div>
               </li>
@@ -92,15 +92,15 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#"
                     >Twitter
-                    <img src="/Celestials_Website/svgs/twitter.svg" alt="" />
+                    <img src="svgs/twitter.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="#"
                     >Tiktok
-                    <img src="/Celestials_Website/svgs/tiktok.svg" alt="" />
+                    <img src="svgs/tiktok.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="/s.html"
                     >Twitch
-                    <img src="/Celestials_Website/svgs/twitch.svg" alt="" />
+                    <img src="svgs/twitch.svg" alt="" />
                   </a>
                 </div>
               </li>
