--- a/pages/valpage.html
+++ b/pages/valpage.html
@@ -141,275 +141,112 @@
         </div>
 
         <div class="container-lg">
-          <div class="row">
-            <div
-              id="playercard"
-              class="col-sm-12 col-lg-4 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="/images/Kyle.JPG"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around">
-                <div class="col">s1</div>
-                <div class="col">s2</div>
-                <div class="col">s3</div>
-                <div class="col">s4</div>
-              </div>
-            </div>
-            <div
-              id="playercard"
-              class="col-sm-12 col-lg-4 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="/images/Kyle.JPG"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around">
-                <div class="col">s1</div>
-                <div class="col">s2</div>
-                <div class="col">s3</div>
-                <div class="col">s4</div>
-              </div>
-            </div>
-            <div
-              id="playercard"
-              class="col-sm-12 col-lg-4 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="/images/Kyle.JPG"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around">
-                <div class="col">s1</div>
-                <div class="col">s2</div>
-                <div class="col">s3</div>
-                <div class="col">s4</div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="container-lg">
           <div class="row justify-content-around">
             <div
-              style="background-color: #f74452"
-              class="col-md-5 col-sm-12 mt-3"
+              id="playercard"
+              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
             >
-              <div class="row border">
-                <div class="col-3 p-0">
-                  <img class="img-fluid" src="Artboard 1.png" alt="" />
-                </div>
+              <div class="row">
+                <img
+                  class="img-fluid p-0 rounded-xlphoto"
+                  src="../images/8x10headshotexample.png"
+                  alt=""
+                />
+              </div>
+              <div class="">
                 <div class="col">
-                  <div class="row">
-                    <div class="row">
-                      <div class="col"><h1>Kyle Landon</h1></div>
-                    </div>
-                    <div class="row">
-                      <div class="col">
-                        <h5 class="text-danger">Gaming Golem</h5>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col">
-                        <p>
-                          kyle is a gaming golem and the owner of celestials.gg
-                        </p>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col"><p>joe mama</p></div>
-                    </div>
-                    <div class="row align-self-end">
-                      <div class="col-auto">
-                        <svg
-                          class="pb-1"
-                          clip-rule="evenodd"
-                          fill-rule="evenodd"
-                          height="20"
-                          stroke-linejoin="round"
-                          stroke-miterlimit="2"
-                          viewBox="-89.00934757 -46.8841404 643.93723344 446.8841404"
-                          width="20"
-                          xmlns="http://www.w3.org/2000/svg"
-                        >
-                          <path
-                            d="m154.729 400c185.669 0 287.205-153.876 287.205-287.312 0-4.37-.089-8.72-.286-13.052a205.304 205.304 0 0 0 50.352-52.29c-18.087 8.044-37.55 13.458-57.968 15.899 20.841-12.501 36.84-32.278 44.389-55.852a202.42 202.42 0 0 1 -64.098 24.511c-18.42-19.628-44.644-31.904-73.682-31.904-55.744 0-100.948 45.222-100.948 100.965 0 7.925.887 15.631 2.619 23.025-83.895-4.223-158.287-44.405-208.074-105.504a100.739 100.739 0 0 0 -13.668 50.754c0 35.034 17.82 65.961 44.92 84.055a100.172 100.172 0 0 1 -45.716-12.63c-.015.424-.015.837-.015 1.29 0 48.903 34.794 89.734 80.982 98.986a101.036 101.036 0 0 1 -26.617 3.553c-6.493 0-12.821-.639-18.971-1.82 12.851 40.122 50.115 69.319 94.296 70.135-34.549 27.089-78.07 43.224-125.371 43.224a204.9 204.9 0 0 1 -24.078-1.399c44.674 28.645 97.72 45.359 154.734 45.359"
-                            fill="#1da1f2"
-                            fill-rule="nonzero"
-                          />
-                        </svg>
-                      </div>
-                      <div class="col-auto">
-                        <svg
-                          class="mb-1"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="20"
-                          height="20"
-                          viewBox="0 0 300 300"
-                        >
-                          <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            fill="#65459B"
-                            d="M215.2 260.8h-58.7L117.4 300H78.3v-39.2H6.6V52.2L26.1 0h267.3v182.6l-78.2 78.2zm52.2-91.2V26.1H52.2v189.1h58.7v39.1l39.1-39.1h71.7l45.7-45.6z"
-                          />
-                          <path
-                            fill="#65459B"
-                            d="M195.6 78.3v78.3h26.1V78.3h-26.1zm-71.7 78.2H150V78.3h-26.1v78.2z"
-                          />
-                        </svg>
-                      </div>
-                      <div class="col-auto">
-                        <svg
-                          class="mb-1"
-                          xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink"
-                          version="1.1"
-                          width="20"
-                          height="20"
-                          viewBox="0 0 256 256"
-                          xml:space="preserve"
-                        >
-                          <defs></defs>
-                          <g
-                            style="
-                              stroke: none;
-                              stroke-width: 0;
-                              stroke-dasharray: none;
-                              stroke-linecap: butt;
-                              stroke-linejoin: miter;
-                              stroke-miterlimit: 10;
-                              fill: none;
-                              fill-rule: nonzero;
-                              opacity: 1;
-                            "
-                            transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
-                          >
-                            <path
-                              d="M 36.203 35.438 v -3.51 c -1.218 -0.173 -2.447 -0.262 -3.677 -0.268 c -15.047 0 -27.289 12.244 -27.289 27.291 c 0 9.23 4.613 17.401 11.65 22.342 c -4.712 -5.039 -7.332 -11.681 -7.328 -18.58 C 9.559 47.88 21.453 35.784 36.203 35.438"
-                              style="
-                                stroke: none;
-                                stroke-width: 1;
-                                stroke-dasharray: none;
-                                stroke-linecap: butt;
-                                stroke-linejoin: miter;
-                                stroke-miterlimit: 10;
-                                fill: rgb(0, 242, 234);
-                                fill-rule: nonzero;
-                                opacity: 1;
-                              "
-                              transform=" matrix(1 0 0 1 0 0) "
-                              stroke-linecap="round"
-                            />
-                            <path
-                              d="M 36.847 75.175 c 6.714 0 12.19 -5.341 12.44 -11.997 l 0.023 -59.417 h 10.855 c -0.232 -1.241 -0.349 -2.5 -0.35 -3.762 H 44.989 l -0.025 59.419 c -0.247 6.654 -5.726 11.993 -12.438 11.993 c -2.015 0.001 -4 -0.49 -5.782 -1.431 C 29.079 73.238 32.839 75.171 36.847 75.175 M 80.441 23.93 v -3.302 c -3.989 0.004 -7.893 -1.157 -11.232 -3.339 c 2.928 3.371 6.869 5.701 11.234 6.641"
-                              style="
-                                stroke: none;
-                                stroke-width: 1;
-                                stroke-dasharray: none;
-                                stroke-linecap: butt;
-                                stroke-linejoin: miter;
-                                stroke-miterlimit: 10;
-                                fill: rgb(0, 242, 234);
-                                fill-rule: nonzero;
-                                opacity: 1;
-                              "
-                              transform=" matrix(1 0 0 1 0 0) "
-                              stroke-linecap="round"
-                            />
-                            <path
-                              d="M 69.209 17.286 c -3.272 -3.744 -5.075 -8.549 -5.073 -13.522 h -3.972 C 61.203 9.318 64.472 14.205 69.209 17.286 M 32.526 46.486 c -6.88 0.008 -12.455 5.583 -12.463 12.463 c 0.004 4.632 2.576 8.88 6.679 11.032 c -1.533 -2.114 -2.358 -4.657 -2.358 -7.268 c 0.007 -6.88 5.582 -12.457 12.463 -12.465 c 1.284 0 2.515 0.212 3.677 0.577 V 35.689 c -1.218 -0.173 -2.447 -0.262 -3.677 -0.268 c -0.216 0 -0.429 0.012 -0.643 0.016 v 11.626 C 35.014 46.685 33.774 46.49 32.526 46.486"
-                              style="
-                                stroke: none;
-                                stroke-width: 1;
-                                stroke-dasharray: none;
-                                stroke-linecap: butt;
-                                stroke-linejoin: miter;
-                                stroke-miterlimit: 10;
-                                fill: rgb(255, 0, 79);
-                                fill-rule: nonzero;
-                                opacity: 1;
-                              "
-                              transform=" matrix(1 0 0 1 0 0) "
-                              stroke-linecap="round"
-                            />
-                            <path
-                              d="M 80.441 23.93 v 11.523 c -7.689 0 -14.81 -2.459 -20.627 -6.633 v 30.13 c 0 15.047 -12.24 27.289 -27.287 27.289 c -5.815 0 -11.207 -1.835 -15.639 -4.947 c 5.151 5.555 12.384 8.711 19.959 8.709 c 15.047 0 27.289 -12.242 27.289 -27.287 v -30.13 c 6.009 4.321 13.226 6.642 20.627 6.633 V 24.387 c -1.484 0 -2.927 -0.161 -4.323 -0.46"
-                              style="
-                                stroke: none;
-                                stroke-width: 1;
-                                stroke-dasharray: none;
-                                stroke-linecap: butt;
-                                stroke-linejoin: miter;
-                                stroke-miterlimit: 10;
-                                fill: rgb(255, 0, 79);
-                                fill-rule: nonzero;
-                                opacity: 1;
-                              "
-                              transform=" matrix(1 0 0 1 0 0) "
-                              stroke-linecap="round"
-                            />
-                            <path
-                              d="M 59.813 58.949 v -30.13 c 6.009 4.322 13.226 6.642 20.627 6.633 V 23.93 c -4.364 -0.941 -8.305 -3.272 -11.232 -6.644 c -4.737 -3.081 -8.006 -7.968 -9.045 -13.522 H 49.309 l -0.023 59.417 c -0.249 6.654 -5.726 11.995 -12.44 11.995 c -4.007 -0.004 -7.768 -1.938 -10.102 -5.194 c -4.103 -2.151 -6.676 -6.399 -6.681 -11.032 c 0.008 -6.88 5.583 -12.455 12.463 -12.463 c 1.282 0 2.513 0.21 3.677 0.577 V 35.438 C 21.453 35.784 9.559 47.88 9.559 62.713 c 0 7.173 2.787 13.703 7.328 18.58 c 4.578 3.223 10.041 4.95 15.639 4.945 C 47.574 86.238 59.813 73.996 59.813 58.949"
-                              style="
-                                stroke: none;
-                                stroke-width: 1;
-                                stroke-dasharray: none;
-                                stroke-linecap: butt;
-                                stroke-linejoin: miter;
-                                stroke-miterlimit: 10;
-                                fill: rgb(0, 0, 0);
-                                fill-rule: nonzero;
-                                opacity: 1;
-                              "
-                              transform=" matrix(1 0 0 1 0 0) "
-                              stroke-linecap="round"
-                            />
-                          </g>
-                        </svg>
-                      </div>
-                    </div>
-                  </div>
+                  <h3 class="text-center">Kyle Landon</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h5 class="text-center">Guild Leader</h5>
+                </div>
+              </div>
+              <div class="row justify-content-around mb-2">
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/twitch.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/twitter.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/tiktok.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/youtube.svg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div
+              id="playercard"
+              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
+            >
+              <div class="row">
+                <img
+                  class="img-fluid p-0 rounded-xlphoto"
+                  src="../images/8x10headshotexample.png"
+                  alt=""
+                />
+              </div>
+              <div class="">
+                <div class="col">
+                  <h3 class="text-center">Kyle Landon</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h5 class="text-center">Guild Leader</h5>
+                </div>
+              </div>
+              <div class="row justify-content-around mb-2">
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/twitch.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/twitter.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/tiktok.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/youtube.svg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div
+              id="playercard"
+              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
+            >
+              <div class="row">
+                <img
+                  class="img-fluid p-0 rounded-xlphoto"
+                  src="../images/8x10headshotexample.png"
+                  alt=""
+                />
+              </div>
+              <div class="">
+                <div class="col">
+                  <h3 class="text-center">Kyle Landon</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h5 class="text-center">Guild Leader</h5>
+                </div>
+              </div>
+              <div class="row justify-content-around mb-2">
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/twitch.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/twitter.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/tiktok.svg" alt="" />
+                </div>
+                <div class="col-3 d-flex justify-content-center">
+                  <img src="../svgs/youtube.svg" alt="" />
                 </div>
               </div>
             </div>
