social and team changes in navbar, playercards white logos, white text

--- a/pages/leaguepage.html
+++ b/pages/leaguepage.html
@@ -52,7 +52,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a
-                  class="fw-bold fs-5 text-light nav-link active dropdown-toggle"
+                  class="fw-bold text-light nav-link active dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -62,24 +62,39 @@
                 >
                   TEAMS
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="valpage.html"
-                    >Valorant
-                    <img src="../svgs/valorant.svg" alt="" />
+                <div
+                  class="dropdown-menu bg-dark"
+                  aria-labelledby="navbarDropdown"
+                >
+                  <a class="dropdown-item" href="valpage.html">
+                    <div class="row">
+                      <div class="col"><p class="text-light">Valorant</p></div>
+                      <div class="col justify-content-center">
+                        <img src="../svgs/valorant.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                   <a class="dropdown-item" href="leaguepage.html"
-                    >League
-                    <img src="../svgs/league.svg" alt="" />
+                    ><div class="row">
+                      <div class="col"><p class="text-light">League</p></div>
+                      <div class="col justify-content-center">
+                        <img src="../svgs/league.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                   <a class="dropdown-item" href="wowpage.html"
-                    >WoW
-                    <img src="../svgs/WoW.svg" alt="" />
+                    ><div class="row">
+                      <div class="col"><p class="text-light">WoW</p></div>
+                      <div class="col justify-content-center">
+                        <img src="../svgs/WoW.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                 </div>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link active text-light dropdown-toggle fw-bold fs-5"
+                  class="nav-link active text-light dropdown-toggle fw-bold"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -89,24 +104,36 @@
                 >
                   SOCIALS
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div
+                  class="dropdown-menu bg-dark"
+                  aria-labelledby="navbarDropdown"
+                >
                   <a class="dropdown-item" href="#"
-                    >Twitter
-                    <img src="../svgs/twitter.svg" alt="" />
+                    ><div class="row justify-content-center">
+                      <div class="col-auto">
+                        <img src="../svgs/twitter.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                   <a class="dropdown-item" href="#"
-                    >Tiktok
-                    <img src="../svgs/tiktok.svg" alt="" />
+                    ><div class="row justify-content-center">
+                      <div class="col-auto">
+                        <img src="../svgs/tiktok.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                   <a class="dropdown-item" href="/s.html"
-                    >Twitch
-                    <img src="../svgs/twitch.svg" alt="" />
+                    ><div class="row justify-content-center">
+                      <div class="col-auto">
+                        <img src="../svgs/twitch.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                 </div>
               </li>
               <li class="nav-item">
                 <a
-                  class="fw-bold fs-5 text-light nav-link active"
+                  class="fw-bold text-light nav-link active"
                   href=""
                   id="navbarDropdown"
                   role="button"
@@ -118,7 +145,7 @@
               </li>
               <li class="nav-item active">
                 <a
-                  class="fw-bold fs-5 text-light nav-link active"
+                  class="fw-bold text-light nav-link active"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -155,12 +182,12 @@
               </div>
               <div class="">
                 <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
+                  <h3 class="text-center text-light">Kyle Landon</h3>
                 </div>
               </div>
               <div class="row">
                 <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
+                  <h5 class="text-center text-light">Guild Leader</h5>
                 </div>
               </div>
               <div class="row justify-content-around mb-2">
@@ -191,12 +218,12 @@
               </div>
               <div class="">
                 <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
+                  <h3 class="text-center text-light">Kyle Landon</h3>
                 </div>
               </div>
               <div class="row">
                 <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
+                  <h5 class="text-center text-light">Guild Leader</h5>
                 </div>
               </div>
               <div class="row justify-content-around mb-2">
@@ -227,12 +254,12 @@
               </div>
               <div class="">
                 <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
+                  <h3 class="text-center text-light">Kyle Landon</h3>
                 </div>
               </div>
               <div class="row">
                 <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
+                  <h5 class="text-center text-light">Guild Leader</h5>
                 </div>
               </div>
               <div class="row justify-content-around mb-2">
