--- a/pages/s.html
+++ b/pages/s.html
@@ -52,7 +52,7 @@
             <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a
-                  class="fw-bold fs-5 text-light nav-link active dropdown-toggle"
+                  class="fw-bold text-light nav-link active dropdown-toggle"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -79,7 +79,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link active text-light dropdown-toggle fw-bold fs-5"
+                  class="nav-link active text-light dropdown-toggle fw-bold"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -96,7 +96,7 @@
                   </a>
                   <a class="dropdown-item" href="#"
                     >Tiktok
-                    <img src="../svgs/tiktok.svg" alt="" />
+                    <img src="../svgs/tiktok2.svg" alt="" />
                   </a>
                   <a class="dropdown-item" href="/s.html"
                     >Twitch
@@ -106,7 +106,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="fw-bold fs-5 text-light nav-link active"
+                  class="fw-bold text-light nav-link active"
                   href=""
                   id="navbarDropdown"
                   role="button"
@@ -118,7 +118,7 @@
               </li>
               <li class="nav-item active">
                 <a
-                  class="fw-bold fs-5 text-light nav-link active"
+                  class="fw-bold text-light nav-link active"
                   href="#"
                   id="navbarDropdown"
                   role="button"
